--- a/README.Rmd
+++ b/README.Rmd
@@ -18,21 +18,15 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of USK is to ...
+(Descrição)
 
 ## Installation
 
-You can install the released version of USK from [CRAN](https://CRAN.R-project.org) with:
-
-``` r
-install.packages("USK")
-```
-
-And the development version from [GitHub](https://github.com/) with:
+You can install the the development version from [github](https://github.com/felipe179971/USK) with:
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("felipe179971/USK")
+devtools::install_github("felipe179971/USK",force = TRUE)
 ```
 ## Example
 
@@ -41,20 +35,13 @@ This is a basic example which shows you how to solve a common problem:
 ```{r example}
 library(USK)
 ## basic example code
+taus=c(4,4,-4,-4,9,-9)
+Tratamento<-as.factor(rep(c(paste("trat",seq(1:length(taus)))),3))
+erro<-rnorm(3*length(taus),0,1)
+y<-2+taus+erro
+y[round(runif(1,min=1,max=length(y)),0)]<-NA
+dados<-data.frame(y,Tratamento)
+
+usktest(y~Tratamento,dados,ANOVA = F)
 ```
 
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/master/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
