--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-You can install the the development version from [github](https://github.com/felipe179971/USK) with:
+You can install the development version from [github](https://github.com/felipe179971/USK) with:
 
 ``` r
 # install.packages("devtools")
